сделано все за 29 мая

--- a/index.html
+++ b/index.html
@@ -66,5 +66,47 @@
     <span id="span_clicker">0</span>
     <button id="clicker" onclick="clicker()">Кликер</button>
 </div>
+
+
+<div id="menu" class="menu">
+    <button id="about" class="about" onclick="about()">О нас</button>
+    <button id="utils" class="utils" onclick="utils()">Услуги</button>
+    <button id="contacts" class="contacts" onclick=" contacts()">Контакты</button>
+</div>
+<div>
+    <div id="about_inner_text">
+
+    </div>
+
+</div>
+<table>
+    <tbody id="table1">
+        <tr id = "1_row">
+            <td>имя</td>
+            <td>должность</td>
+            <td>отдел</td>
+
+        </tr>
+        <tr id = "2_row">
+            <td>иван</td>
+            <td>старший педиатор</td>
+            <td>MSA</td>
+        </tr>
+    </tbody>
+</table>
+<input type="text" id="intinput">
+<button type="submit" id="save1" onclick="addnewrow1()">вывести Имя</button>
+<input type="text" id="intinput1">
+<button type="submit" id="save2" onclick="addnewrow2()">вывести должность</button>
+<input type="text" id="intinput2">
+<button type="submit" id="save3" onclick="addnewrow3()">вывести отдел</button>
+
+
+
+
+
+
+
+
 </body>
 </html>
